styles/ui.scss
@use "sass:meta";
@use "variables.scss";

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  line-height: 20px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--background-footer);
  color: var(--text-main);
  transition: background-color 200ms, color 200ms;
}

#root {
  height: 100%;
}

body.dark {
  #logo, #receiptLogo {
    path, rect {
      fill: white;
    }
  }
}

.body {
  display: flex;
  min-height: 100%;
  flex-direction: column;
  position: relative;
  background-color: var(--background-main);
  transition: background-color .5s, color .5s;
  color: var(--text-main);
  overflow-x: hidden;
  background-size: 100% auto;
}

.content {
  border-top: 55px solid var(--background-header);
  flex: 1;

  @media only screen and (max-width: 1760px) and (min-width: 1370px) {
    border-top: 103px solid var(--background-header);
  }

  @media only screen and (max-width: 1050px) {
    border-top: 103px solid var(--background-header);
  }

  .content-cols {
    display: flex;
    position: relative;

    .text-after-filter-toggle {
      margin-left: 15px;
      margin-right: 30px;
      margin-top: -5px;
    }

    &.is-filters-hide {
      .text-after-filter-toggle {
        margin-left: 125px;
      }
    }

    @media only screen and (max-width: 1300px) {
      .text-after-filter-toggle {
        margin-left: 125px;
        margin-top: 20px;
      }
    }

    @media only screen and (max-width: 440px) {
      .text-after-filter-toggle {
        margin-left: 115px;
        margin-top: -7px;
      }
    }

    &::before {
      content: '';
      position: absolute;
      inset: 0 15px auto;
      border-top: 1px solid #ccc;

      @media(min-width: 1300px) {
        z-index: 3;
      }
    }
  }

  .explorer-tabs-block + .content-cols::before {
    border-top: none;
  }

  .content-text,
  .content-center,
  .content-profile {
    z-index: 1;
    position: relative;
  }

  .content-profile {
    margin: 20px auto;
    width: calc(100% - 40px);
    max-width: 1000px; // 1828px max
  }

  .content-text {
    margin: 20px;
  }

  .content-center {
    margin: 20px auto;
    max-width: 760px;
    &.short-top {
      margin-top: 40px;
    }
    &.short-bottom {
      margin-bottom: 40px;
    }
    @media only screen and (max-width: 800px) {
      margin: 20px;
      &.short-top {
        margin-top: 20px;
      }
    }
  }
}

/* On routes where the second line should be hidden, reduce content offset to single-line header height */
@media only screen and (max-width: 1760px) and (min-width: 1370px) {
  .hide-secondline ~ .content {
    border-top: 56px solid var(--background-header);
  }
}

@media only screen and (max-width: 1050px) {
  .hide-secondline ~ .content {
    border-top: 56px solid var(--background-header);
  }
}

h1 {
  font-size: 1.5em;
  line-height: 1.2em;
}

h4 {
  margin: 10px auto;
}

br {
  position: relative !important; //fix for safari
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.code-highlight {
  background-color: var(--background-input-readonly);
  word-break: break-all;
}

a, .link {
  cursor: pointer;
  color: var(--accent-link);
  transition: color 0.5s;
  &:hover {
    color: var(--accent-link-hover);
  }
  &.hover-oposite {
    &:hover {
      color: var(--text-oposite);
    }
  }

  .wallet-logo {
    margin-right: 5px;
    vertical-align: middle;
  }

  .xaman-logo {
    width: 24px;
    height: 24px;
    border-radius: 5px;
  }
}

input, textarea {
  appearance: none;
  -webkit-appearance: none; // for ios safari
  border-radius: 0; // remove rounded corners on ios safari
  font-size: 16px; // remove auto zoom on ios safari
  outline: none; // remove default rounded corners on focus
  font-family: inherit;
  transition: background-color .5s, color .5s;
  background-color: var(--background-input);
  caret-color: var(--text-main);
  color: var(--text-main);
  &.input-text {
    height: 36px;
    width: calc(100% - 22px);
    max-width: 738px;
    border: 1px solid var(--unaccent-icon);
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 1px; // set for ios safari
    padding-bottom: 1px; // set for ios safari
    &.halv {
      margin: 5px;
      max-width: 378px;
      width: calc(100% - 44px);
    }
    &:-webkit-autofill,
    &:-webkit-autofill:focus {
      transition: background-color 0s 600000s, color 0s 600000s !important; // a style trick for chrome autofill, otherwise it's white in the dark scheme
    }
    &:hover, &:focus {
      transition: border-color 0.5s;
      box-shadow: 0 0 5px var(--unaccent-icon);
    }
    &:focus {
      box-shadow: 0 0 5px var(--unaccent-icon);
    }
    &:read-only {
      background-color: var(--background-input-readonly);
      &:focus {
        box-shadow: none;
      }
    }
  }
  &.input-text-no-border {
    border: none;
  }
}

textarea {
  &.input-text {
    height: 200px;
    resize: none;
    padding-top: 10px;
  }
}

.input-validation {
  position: relative;
  .validation-icon {
    position: absolute;
    width: 30px;
    height: 30px;
    top: 6px;
    right: 6px;
    @media only screen and (max-width: 420px) {
      display: none;
    }
  }
}

.input-title {
  text-align: left;
  display: inline-block;
  width: 100%;
  padding-bottom: 5px;
}

span.whole {
  margin: 5px;
  max-width: 766px;
  width: calc(100% - 12px);
  display: inline-block;
  input {
    &.input-text {
      max-width: 744px;
    }
  }
  @media only screen and (max-width: 816px) {
    width: calc(100% - 44px);
    max-width: 378px;
  }
}

span.halv {
  margin: 5px;
  max-width: 378px;
  width: calc(100% - 44px);
  display: inline-block;
}
/* ... */

